<resources>
    <string name="app_name">Descendent</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="location">Location</string>
    <string name="name">Name</string>
    <string name="title_activity_maps">Map</string>
    <string name="sr_mostacho">Sr. Mostacho</string>
    <string name="rincon_28">Rincón 28</string>
    <string name="fruty">Fruty Yoghurt</string>
    <string name="nana_pancha">Nana Pancha</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="restaurante_plaza">Restaurante Plaza</string>
    <string name="info_corner">Ya conoces Rincón 28 Pizza and Grill! Ven a nuestro restaurante, te invitamos a que pruebes el platillo del día.</string>
    <string name="info_mostacho">En el Mostacho se come como en casa... pero sin tener que lavar los platos. Ven a tener una nueva oportunidad ce conocer algo nuevo!</string>
    <string name="info_nana_pancha">Cocinar con amor te alimenta el alma y en Nana Pancha es lo que buscamos. Date la oportunidad de conocernos.</string>
    <string name="info_restaurant_square">Comer o no comer esa es la cuestion, no me cuestione y coma aqui. Ven y conoce lo que tenemos para ti</string>
    <string name="desliza">Desliza hacia arriba para visualizar las imagenes.</string>
    <string name="info_video_one">El siguiente video muestra donde se encuentra el Pueblo Mágico Dolores Hidalgo C.I.N. Gto., y los lugares más famosos que se pueden encontrar. El video es tomado de YouTube y se respentan los derechos de autor: Copyright: Galerías TV</string>
    <string name="info_video_two">El siguiente video muestra donde se encuentra el Pueblo Mágico Dolores Hidalgo C.I.N. Gto., y los lugares más famosos que se pueden encontrar. El video es tomado de YouTube y se respentan los derechos de autor: Copyright: Adolfo Campos</string>
    <string name="info_video_three">Entre montañas y depresiones de la serranía, palpita el corazón de nuestra nación independiente. La historia de este pueblo mágico narra los trascendentes acontecimientos que le dieron rumbo al destino de cada mexicano. Hace más de dos siglos que el cura don Miguel Hidalgo y Costilla hizo repicar la campana, y su vibrante llamado aun se siente en cada uno de los rincones del pueblo. En su parroquia, sus templos, sus haciendas, en cada calle donde transitan todos los días sus habitantes y sus visitantes. Mientras disfrutas de una deliciosa nieve, estás invitado a sentir ésta, tu vibrante historia. El video es tomado de YouTube y se respentan los derechos de autor: Copyright: Guanajuato México</string>
    <string name="info_video_four">Conoce varios aspectos turísticos de Dolores Hidalgo C.I.N. Guanajuato. El video es tomado de YouTube y se respentan los derechos de autor: Copyright: Turismo Dolores Hidalgo</string>
    <string name="login_principal">Login Principal</string>
    <string name="password">Contraseña</string>
    <string name="sign_in">Entrar</string>
    <string name="register">Registrar</string>
    <string name="register_user">Registrar Usuario</string>
    <string name="get_out">Salir</string>
    <string name="content">Esté vídeo muestra un poco sobre la cultura que se tiene en Dolores Hidalgo C.I.N., Gto, su gente, sus iglesias, su historia, no habrá un mejor lugar para conocer está historia como lo es en el museo Casa de los Descendientes de Hidalgo, ven y atrevete a vivir una experiencia inolvidable en esté bello pueblo</string>
    <string name="info_paint">Sala 1 Pinturas \nEn esta sala encontraras gran variedad de  pinturas podrás ver una copia del retrato  más original de Miguel Hidalgo y Costilla, ya que la original se encuentra en la Alhondiga de Granaditas en la cuidada de Guanajuato.</string>
    <string name="info_photo_tour">Sala 2 Fotografías \nEn esta sala encontraras gran variedad de  fotografías una de ellas es una de alto valor  de importancia ya que es el acta de bautizo  de Miguel Hidalgo y Costilla.</string>
    <string name="info_model_tour">Sala 3 Maquetas \nEn esta sala encontraras todo tipo de maquetas  relacionadas con la historia de Dolores Hidalgo y como era que vivían nuestros antepasados</string>
    <string name="info_statue_tour">Sala 4 Estatuas \nEn esta sala encontraras gran variedad de  Estatuas algunas de ella son:  *Miguel Hidalgo y Costilla *El Pipila</string>
    <string name="info_handicrafts_two">Dolores Hidalgo es uno de los principales centros productores de azulejo tradicional de mayólica con decoración de tipo colonial, de México.</string>
    <string name="info_handicrafts_three">Cabe resaltar que estás cerámicas no se pueden designar con la palabra talavera ya que en 1997 Puebla realizó trámites ante el Instituto Mexicano de la Propiedad Industrial para obtener la denominación de origen.</string>
    <string name="info_handicrafts_one">Las vajillas *tipo Talavera con influencia española son de alta calidad, también se fabrica la típica alfarería en jarrones, macetas y cántaros, además de diferentes piezas de cerámica hechas y decoradas a mano.</string>
    <string name="dolores">Dolores</string>
    <string name="artesanias">Artesanias</string>
    <string name="ny_handicrafts">NY Artesania</string>
    <string name="p1_0">P1: 0</string>
    <string name="p2_0">P2: 0</string>
    <string name="title_church_one">Parroquia de Nuestra  \nSeñora de Los Dolores</string>
    <string name="detail_church_one">Plaza Principal s/n, \nCentro, Dolores Hidalgo,  \nGto., 37800</string>
    <string name="info_church_one">La edificación de la Parroquia de Nuestra Señora de Los Dolores se inició el 2 de Febrero de 1712 por disposición del Sr. Cura Lic. Álvaro de Osio y Ocampo y se concluyó en el año de 1778. En el año  de 1803, Don Miguel Hidalgo y Costilla se hace cargo del curato de la Parroquia y, en el pórtico de la misma, proclama el Grito de Independencia la madrugada del domingo 16 de septiembre de 1810.</string>
    <string name="tilte_church_two">Parroquia de  La Asunción</string>
    <string name="detail_church_two">Puebla 32, Centro, \nDolores Hidalgo, Gto., 37800</string>
    <string name="info_church_two">La construcción del Templo de la Asunción de María inició el 12 de mayo de 1875 por disposición del Sr. Cura Don José María Gómez. Antes de ser nombrada como santa patrona bajo la advocación de la Asunción de María, se la veneraba como la Virgen de la Saleta</string>
    <string name="tilte_church_three">Templo de la  \nTercera Orden</string>
    <string name="detail_church_three">Puebla 7, Centro, \nDolores Hidalgo, Gto., 37800</string>
    <string name="info_church_three">Después de la Parroquia de Nuestra Sra. De los Dolores, es el inmueble religioso más antiguo de la ciudad, según se aprecia en una inscripción que aparece en el arco del coro indicando que fue cerrado en 1755. Edificio compuesto de tres naves, su altar mayor está dedicado a la Virgen de la Inmaculada Concepción</string>
    <string name="tilte_church_four">Templo el Señor  \ndel Calvario</string>
    <string name="detail_church_four">37800 Centro,  \nGuanajuato 35B, Centro, Gto.</string>
    <string name="info_church_four">Este Templo fue construido en 1510., por mano de gente del pueblo y dirigido por los frailes Agustinos.</string>
    <string name="tilte_church_five">Jesús Nazareno</string>
    <string name="detail_church_five">Corregidora 5, Centro, 37800 \nDolores Hidalgo C.I.N., Gto.</string>
    <string name="info_church_five">El Templo de Jesús Nazareno se comenzó construir el 16 de junio 1875. La historia de los registros parroquiales nos indica que: se realizó junta de vecinos del barrio de «la obra banda» -la banda sur del Río Batán- para solicitarle al Señor Cura José María Gómez la necesidad de construir un templo para los auxilios espirituales</string>
    <string name="title_gallery_three">Don Miguel de Hidalgo</string>
    <string name="summary_gallery_three">Esta litografía data del sigo XVIII, es Miguel Gregorio Antonio Ignacio Hidalgo Costilla Gallega Mandarte Villaseñor a la edad de 39 años, siendo rector del Colegio de San Nicolás Obispo Valladolid hoy Morelia Michoacán</string>
    <string name="summary_gallery_two">Litografía de Jesús Ramírez, la pintura original se encuentra en la Alhóndiga de Granaditas \'Miguel Gregorio Antonio Ignacio Hidalgo Costilla Gallega Mandarte Villaseñor\'</string>
    <string name="title_gallery_two">Miguel Gregorio Antonio Ignacio Hidalgo Costilla</string>
    <string name="title_gallery_one">Ignacio José de Jesús Pedro</string>
    <string name="summary_gallery_one">Litografía de Ramón Pérez, Ignacio José de Jesús Pedro Regalado Allende Iunsaga</string>
    <string name="title_gallery_four">María Josefa Crescencia Ortiz</string>
    <string name="summary_gallery_four">Litografía de 1807 de autor desconocido, su nombre original María Josefa Crescencia Ortiz Téllez Gámez de Domínguez</string>
    <string name="title_gallery_five">Maqueta Parroquia de Nuestra Señora de los Dolores</string>
    <string name="summary_gallery_five">Maqueta a escala de la Parroqui de Nuestra Señora de los Dolores, fue fundada el 2 de febrero de 1712 por el Licenciado Alvaro de Osio y Ocampo, el primer Cura de la Villa de Dolores, antiguamente Cocomacan o Comacora</string>
</resources>
